# Udebs

./: .gitignore  Function  Interpreter  LICENSE.md  README.md  RPS.py  RPS2.ipynb  chess.py  chess.xml  chess.xml~  chopsticks.py  connect4.py  hex.py  hex.xml  life.py  pushluck.ipynb  pushluck.py  pyproject.toml  river.py  river.xml  rpg.py  rpg.xml  setup.py  tactical.py  tactical.xml  test.py  test.xml  testing.py  tictactoe.py  trust.py  tutorial.ipynb  udebs.py  udebs.py~  zanar2.py  zanar2.xml  zanar3.py
demos/: udebs_hex  udebs_hex.py  udebs_life  udebs_life.py  udebs_rps  udebs_rps.py  udebs_tictactoe  udebs_tictactoe.py
docs/: conf.py  index.rst
old/: chess.py  hex.py
old/xml/: hex.xml  test.xml
python2x/: udebs.py  zanar2.py
python3x/: chess.py  chess.xml  rpg.xml  setup.py  test.py  udebs.py  zanar2.py  zanar2.xml
udebs/: __init__.py  basic.py  board.py  dispatchmethod.py  entity.py  errors.py  instance.py  interpret.py  keywords.json  loadxml.py  main.py  players.py  profile.py  profile_parse_output.py  state.py  testing.py  treesearch.py  utilities.py
udebs/keywords/: __init__.py  base-0.json  base-1.json  base-2.json  base_0.py  base_1.py  udebs-0.json  udebs-1.json  udebs-2.json  udebs_0.py  udebs_1.py
udebs/modules/: card_stack.py  flat_map.py
udebs/tests/: test.xml  test_board.py  test_entity.py  test_instance.py  test_interpret.py  test_objects.py  test_utilities.py  test_xml.py  (+1 more)
xml/: chess.xml  chopsticks.xml  connect4.xml  hex.xml  life.xml  pushluck.xml  river.xml  rpg.xml  rps.xml  tictactoe.xml  trust.xml  zanar2.xml  zanar3.xml
(+4 files in other folders)
