[tool.poetry]
name = "udebs"
version = "1.1.1"
description = ""
authors = ["Ryan Chartier <redrecrm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.2"
coverage = "^6.4.3"

[tool.poetry.dev-dependencies]
pygame = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
